--- a/src/styles.css
+++ b/src/styles.css
@@ -96,19 +96,18 @@ body {
 /* Red Creature at Top of Card */
 .card-mascot {
   position: absolute;
-  top: 0;
-  left: 50%;
-  width: 220px;      /* ✅ مساحة ثابتة */
-  height: 220px;     /* ✅ */
-  transform: translate(-50%, -60%);
+  top: 10%;
+  left: 23%;
+  transform: translate(-50%, -85%);
   z-index: 10;
   pointer-events: none;
 }
 
 .card-mascot img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  width: clamp(90px, 20vw, 250px);
+  height: auto;
+  /* ✅ تحسين الصور */
+  image-rendering: -webkit-optimize-contrast;
 }
 
 .card-header {
@@ -516,15 +515,6 @@ body {
 }
 
 @media (min-width: 769px) {
-   * {
-    animation: none !important;
-    transition: none !important;
-  }
-
-  .gradient-bg {
-    display: none;
-  }
- 
   .hero-img {
     animation: float 6s ease-in-out infinite;
     will-change: transform;
@@ -533,10 +523,20 @@ body {
 
 
 @media (max-width: 768px) {
- .hero-img {
-    display: none !important;
+ 
+ * {
+    animation: none !important;
+    transition: none !important;
   }
 
+  .gradient-bg {
+    display: none;
+  }
+
+  .hero-img {
+    display: none !important;
+  }
+  
   .card {
     margin: 5vh auto;
     margin-bottom: 80px;
