--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,7 @@ body {
 .coin-icon {
   width: 23px;
   height: 23px;
+  margin-top: 10px;
   object-fit: contain;
   image-rendering: -webkit-optimize-contrast;
 }
