editing in style

--- a/src/styles.css
+++ b/src/styles.css
@@ -708,11 +708,13 @@ body {
 .seo-title {
   font-size: 1.2rem;
   margin: 10px 0 6px;
+  color: #d1b2b2d9;
 }
 
 .seo-subtitle {
   font-size: 1rem;
   margin: 12px 0 6px;
+  color: #d1b2b2d9;
 }
 
 .seo-text {
